sumo/tests/sumo/output/e2/errors/pos_too_high/detector.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Fri Feb 24 13:11:03 2017 by SUMO Version dev-SVN-r22922
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <time>
        <begin value="0"/>
        <end value="1000"/>
    </time>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<detector xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/det_e2_file.xsd">
</detector>
